frdrpc+frdrpcserver: implement GetChannelEvents
