# frdrpc/faraday.swagger.json
@@ -153,6 +153,102 @@
         ]
       }
     },
+    "/v1/faraday/getchannelevents": {
+      "get": {
+        "summary": "*\nGet a list of channel events that occurred for a given channel.",
+        "operationId": "FaradayServer_GetChannelEvents",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/frdrpcChannelEventsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "chan_point",
+            "description": "The channel point of the channel to get events for, formatted txid:outpoint.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "start_time",
+            "description": "The start time of the query range, expressed as unix epoch offset in\nseconds.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "end_time",
+            "description": "The end time of the query range, expressed as unix epoch offset in seconds.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "uint64"
+          },
+          {
+            "name": "event_types",
+            "description": "An optional list of event types to filter by. If empty, all event types will\nbe returned.\n\n - CHAN_EVENT_UNKNOWN: An unknown event type.\n - CHAN_EVENT_ONLINE: An online event.\n - CHAN_EVENT_OFFLINE: An offline event.\n - CHAN_EVENT_UPDATE: A channel balance update event.",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string",
+              "enum": [
+                "CHAN_EVENT_UNKNOWN",
+                "CHAN_EVENT_ONLINE",
+                "CHAN_EVENT_OFFLINE",
+                "CHAN_EVENT_UPDATE"
+              ]
+            },
+            "collectionFormat": "multi"
+          }
+        ],
+        "tags": [
+          "FaradayServer"
+        ]
+      },
+      "post": {
+        "summary": "*\nGet a list of channel events that occurred for a given channel.",
+        "operationId": "FaradayServer_GetChannelEvents2",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/frdrpcChannelEventsResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/frdrpcChannelEventsRequest"
+            }
+          }
+        ],
+        "tags": [
+          "FaradayServer"
+        ]
+      }
+    },
     "/v1/faraday/insights": {
       "get": {
         "summary": "* frcli: `insights`\nList currently open channel with routing and uptime information.",
@@ -658,6 +754,80 @@
         "currency": {
           "type": "string",
           "description": "The currency that the price is denoted in."
+        }
+      }
+    },
+    "frdrpcChannelEvent": {
+      "type": "object",
+      "properties": {
+        "timestamp": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The timestamp of the event."
+        },
+        "event_type": {
+          "$ref": "#/definitions/frdrpcChannelEventType",
+          "description": "The type of the event."
+        },
+        "local_balance": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The channel's local balance at the time of the event in sat."
+        },
+        "remote_balance": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The channel's remote balance at the time of the event in sat."
+        }
+      }
+    },
+    "frdrpcChannelEventType": {
+      "type": "string",
+      "enum": [
+        "CHAN_EVENT_UNKNOWN",
+        "CHAN_EVENT_ONLINE",
+        "CHAN_EVENT_OFFLINE",
+        "CHAN_EVENT_UPDATE"
+      ],
+      "default": "CHAN_EVENT_UNKNOWN",
+      "description": " - CHAN_EVENT_UNKNOWN: An unknown event type.\n - CHAN_EVENT_ONLINE: An online event.\n - CHAN_EVENT_OFFLINE: An offline event.\n - CHAN_EVENT_UPDATE: A channel balance update event."
+    },
+    "frdrpcChannelEventsRequest": {
+      "type": "object",
+      "properties": {
+        "chan_point": {
+          "type": "string",
+          "description": "The channel point of the channel to get events for, formatted txid:outpoint."
+        },
+        "start_time": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The start time of the query range, expressed as unix epoch offset in\nseconds."
+        },
+        "end_time": {
+          "type": "string",
+          "format": "uint64",
+          "description": "The end time of the query range, expressed as unix epoch offset in seconds."
+        },
+        "event_types": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/frdrpcChannelEventType"
+          },
+          "description": "An optional list of event types to filter by. If empty, all event types will\nbe returned."
+        }
+      }
+    },
+    "frdrpcChannelEventsResponse": {
+      "type": "object",
+      "properties": {
+        "events": {
+          "type": "array",
+          "items": {
+            "type": "object",
+            "$ref": "#/definitions/frdrpcChannelEvent"
+          },
+          "description": "The list of channel events."
         }
       }
     },
